--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
+# lock files
+package-lock.json
+yarn.lock
 # Editor directories and files
 .idea
 .vscode
